Field, Element, Template parsing is working

--- a/app/resources/i18n/locale-en.json
+++ b/app/resources/i18n/locale-en.json
@@ -12,6 +12,8 @@
     "schema": "Schema",
     "schemaRaw": "Raw Schema",
     "modelOutput": "Model JSON",
-    "descriptor": "Descriptor Object"
+    "descriptorField": "Field Descriptor",
+    "descriptorElement": "Element Descriptor",
+    "descriptorTemplate": "Template Descriptor"
   }
 }
